--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,10 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3||^8.0",
-        "fideloper/proxy": "^4.2",
-        "laravel/framework": "^8.0",
-        "laravel/tinker": "^2.0"
+        "php": "^7.1.3",
+        "fideloper/proxy": "^4.0",
+        "laravel/framework": "5.7.*",
+        "laravel/tinker": "^1.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
